--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Bootstrap demo</title>
+    <title>Indrajith P G</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
